# object_perception

./: README.md  package.xml  setup.cfg  setup.py
launch/: perception.launch.py
object_perception/: object_detector copy.py  object_detector.py  static_tf_publisher.py
